deploy/egress/egress-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-gateway
  namespace: istio-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: egress-gateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: egress-gateway
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: egress-gateway
      containers:
        - name: istio-proxy
          image: auto # replaced by the injection webhook
---
apiVersion: v1
kind: Service
metadata:
  name: egress-gateway
  namespace: istio-egress
spec:
  selector:
    istio: egress-gateway
  ports:
    - port: 80
      targetPort: 8080
      name: http
